--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
     ports:
       - 4523:5432
     volumes:
-      - C:/Users/konst/Desktop/HW/EncryptedMessenger/data:/var/lib/postgresql/data
+      - ./data:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD", "pg_isready", "-q", "-d", "public", "-U", "postgres", "-h", "db"]
       interval: 2s
